# clippit

./: .gitignore  README.md  pyproject.toml  requirements.txt
clippit/configs/: simple_config.json  train_config.json
clippit/data/: dataset.py
clippit/model/: clippit.py  decoder.py  positional_embedding.py  self_attention.py
clippit/notebooks/: Untitled.ipynb  eda.ipynb
clippit/scripts/: train_clippit.py
clippit/utils/: download_datasets.py
